Cleaned up and also fixed navigation bar disappearing behind the canvas.

--- a/css/focusmodel.css
+++ b/css/focusmodel.css
@@ -28,7 +28,7 @@ input, output {display: inline-block; vertical-align: middle;}
 #ctrlnote {padding: 2px;}
 .redbg {background-color: red; color: white; border-radius: 3px;}
 
-.navigation {position:fixed; margin:0; padding:5px; background-color:#444; border-radius:3px; top:5px; left:5px;}
+.navigation {z-index:100; position:fixed; margin:0; padding:5px; background-color:#444; border-radius:3px; top:5px; left:5px;}
 .navigation {border:1px solid black;}
 .navigation a {color:orange;}
 .navigation a:hover {color:white;}
